<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ckmcknight.android.rltictactoe.Ui.GameActivity">

    <TextView
        android:id="@+id/gameActivityTitle"
        android:layout_width="210dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/game_title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/s0_0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s0_1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s0_2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/s1_0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s1_1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s1_2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/s2_0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s2_1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/s2_2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/homeScreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_screen_button_name"
            android:visibility="invisible" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again_button_name"
            android:visibility="invisible" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
